# 3_sem_Lunev

Projects/Container/: Makefile  RBTree.c  RBTree.h  helper.c  helper.h  main.c  tester.c  tester.h
Projects/Container/Test/: main.c  tester.c  tester.h
Projects/Container/include/: RBTree.h  helper.h
Projects/Container/src/: RBTree.c  helper.c
Projects/Integral/: Makefile  calc.c  calc.h  cpu_info.c  cpu_info.h  main.c  main_test.c  mans  pthread_manager.c  test  true.c
Projects/MsgMes/: CMakeLists.txt  build  main.c  message_header.h  messages.c  msg_without_arr.c
Projects/NetworkIntegration/: Makefile  main.c
Projects/NetworkIntegration/Integration/: calc.c  pthread_manager.c
Projects/NetworkIntegration/Network/: worker_manager.c  worker_manager.h
Projects/NetworkIntegration/include/: common.h
Projects/NetworkIntegration/src/: common.c
Projects/Proxy/: header.h  main.c  src.c  train.c
Projects/Signals/: header.h  main.c  src.c  test.txt  while_60
Projects/TransFileSemShm/: RemoveAll.c  build  header.h  main.c  reader.c  rm_build  src.c  writer.c
Projects/tmp/Threads/: test.sh
Seminars/Lunev_2sem_1/: CMakeLists.txt  a.out  main.c
Seminars/Lunev_2sem_2/: CMakeLists.txt  a.out  exec  main.c
Seminars/Lunev_2sem_3/: CMakeLists.txt  a.out  main.c
Seminars/Lunev_3sem_1/: CMakeLists.txt  a.out  main.c
Seminars/train/: CMakeLists.txt  Q_5_task1.c  check_process.c  chprctl  fork_test.c  forktest  input.c  main.c  out  output.c  sel_test  select_test.c  sem_test  semaphore_test.c  shm_test.c  shmtest  signal_test.c
(+7 files in other folders)
